downgrade to java 1.8 and update deps